--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="just_text">Just text</string>
     <string name="hi">Hi!</string>
     <string name="cool">Cool!</string>
-    <string name="button1">Back</string>
+    <string name="button1">Change</string>
     <string name="button2">Change</string>
     <string name="todo">TODO</string>
 
